! fixed resize bug ... again ... (resize handle was too close to neighboring cell, leading to dragging into no-drop area)

--- a/js/simulator/view/timeline.css
+++ b/js/simulator/view/timeline.css
@@ -190,13 +190,14 @@ table#timelineTable tr.timeline-step > td.timeline-cell-occupied div.occupied-re
     width: 100%;
     height: 3px;
     position: absolute;
-    bottom: 0px;
+    bottom: 2px;
+    z-index: 90;
     display: block;
     cursor: s-resize;
 }
 table#timelineTable tr.timeline-step > td.timeline-cell-occupied div.occupied-resize-handle:hover
 {
-     border-bottom: double;
+     border-bottom: solid;
 }
 
 
